2023-07-20  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro version and date

	* src/calendars.cpp: Correct type in dispatch for 'Australia/ASX'

	* .gitignore: Add nested source directories

2023-07-19  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.0.7

	* src/ql/time/calendars/*.*pp: Bulk update of cpp and hpp files from
	QuantLib 1.31 with fixes for rolling rules in South Korea, fixes as
	well as additions for Hong Kong, additions for Singapore, India and
	Taiwan, additions of election days in South Africa and South Korea,
	updates and fixes for Denmark and Finland; see the QuantLib 1.31
	release announcement for the full list

	* src/calendars.cpp: Add support for UnitedStates/SOFR
	* R/calendars.R: Idem

	* demo/allUScalendars.R (makeHol): Add SOFR to holiday demo

2023-05-24  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.0.6

2023-05-23  Dirk Eddelbuettel  <edd@debian.org>

	* src/ql/errors.cpp: Added from current QuantLib
        * src/ql/errors.hpp: Idem
        * src/ql/optional.cpp: Synchronized with current QuantLib
        * src/ql/optional.hpp: Idem
        * src/ql/patterns/observable.cpp: Idem
        * src/ql/patterns/observable.hpp: Idem
        * src/ql/patterns/singleton.hpp: Idem
        * src/ql/settings.hpp: Idem
        * src/ql/time/date.cpp: Idem
        * src/ql/time/date.hpp: Idem
        * src/ql/time/period.cpp: Idem
        * src/ql/time/period.hpp: Idem
        * src/ql/utilities/dataformatters.hpp: Idem
        * src/ql/utilities/dataparsers.cpp: Idem
        * src/ql/utilities/dataparsers.hpp: Idem
        * src/ql/utilities/null.hpp: Idem
        * src/ql/utilities/observablevalue.hpp: Idem

	* src/Makevars: Added errors.cpp
	* src/Makevars.win: Idem

2023-05-22  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro version and date

	* src/ql/time/asx.hpp: Remove unused file
	* src/ql/time/ecb.hpp: Idem